--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "mern_boilerplate",
+  "name": "sd_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validation": "^4.1.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
